--- a/package.json
+++ b/package.json
@@ -1,15 +1,12 @@
 {
-  "name": "@elf/babel-preset-elf",
-  "version": "1.0.0",
+  "name": "babel-preset-elf",
+  "version": "1.0.0-beta1",
   "description": "babel-preset-elf for elf-scripts",
   "main": "index.js",
   "keywords": [
     "elf",
     "cli"
   ],
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "dependencies": {
     "@babel/plugin-proposal-decorators": "^7.6.0",
     "@babel/preset-env": "^7.6.2",
